overlap bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,6 @@ body{
 /* Contact -- Contact -- Contact -- Contact -- Contact -- Contact -- Contact -- Contact -- Contact*/
 
 #Contact{
-    height: 100vh;
     color: gray;
     display: flex;
     align-items: center;
